<resources>
    <string name="app_name">OnlineMarket</string>
    <string name="classical_guitar">Classical Guitar</string>
    <string name="newest">جدیدترین محصولات</string>
    <string name="special_product">پیشنهادات ویژه</string>
    <string name="most_visited_products">پربازدید ترین محصولات</string>
    <string name="best_products">بهترین محصولات</string>
    <string name="more_info_product">بیشتر ...</string>
    <string name="more">بیشتر </string>
    <string name="product_price">قیمت محصول :</string>
    <string name="product_regular_price">قیمت  با تخفیف محصول :</string>
    <string name="product_reviews">نظرات بازدید کنندگان </string>
    <string name="more_info_web">مشاهده جزئیات بیشتر در سایت</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_view">SearchViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">فروشگاه آنلاین</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_basket">Cart</string>

    <string name="menu_home">خانه</string>
    <string name="menu_categories">دسته بندی</string>
    <string name="menu_search">جستجو</string>
    <string name="menu_filter">فیلتر</string>
    <string name="menu_account">حساب کاربری</string>
    <string name="menu_notification">تنظیمات اعلان</string>
    <string name="menu_products">محصولات</string>
    <string name="menu_map">نقشه</string>
    <string name="menu_cart">سبد خرید</string>
    <string name="menu_customer_info">اطلاعات مشتری</string>
    <string name="menu_login">ورود</string>
    <string name="menu_sign">ثبت نام</string>
    <string name="menu_product_info">اطلاعات محصول</string>
    <string name="menu_loading_product">بارگزاری اطلاعات محصول</string>
    <string name="menu_more_visited">پربازدید ترین ها</string>
    <string name="menu_best_product">بهترین ها</string>
    <string name="menu_newest_product">جدیدترن ها</string>
    <string name="filter_color">فیلتر بر اساس رنگ</string>
    <string name="filter_size">فیلتر بر اساس اندازه</string>
    <string name="select">انتخاب</string>
    <string name="newest_filter">جدیدترین ها</string>
    <string name="best_sellers_filter">پرفروش ترین ها</string>
    <string name="price_low_to_high">قیمت از کم به زیاد</string>
    <string name="price_high_to_law">قیمت از زیاد به کم</string>
    <string name="nothing_to_show">محصولی برای نمایش وجود ندارد</string>
    <string name="empty_shop_basket">سبد خرید شما خالی است</string>
    <string name="family_name"> نام خانوادگی</string>
    <string name="first_name"> نام</string>
    <string name="address">آدرس</string>
    <string name="email_address">آدرس ایمیل</string>
    <string name="telephone">شماره تلفن</string>
    <string name="username">نام کاربری</string>
    <string name="sign_up">ثبت نام</string>
    <string name="add_to_basket">افزون به سبد خرید</string>
    <string name="total_price">قیمت کل :</string>

    <string name="repetitive_email">این ایمل توسط شخص دیگری ثبت شده است لطفا ایمیل دیگری را ثبت نمایید</string>
    <string name="order_fail">سفارشات ارسال نشد</string>
    <string name="order_success">سفارشات با موفقیت ارسال شد</string>
    <string name="finalize_the_purchase">نهایی کردن خرید</string>
    <string name="setup_notification">تنظیم زمان اعلان</string>
    <string name="setup_custom_notification">تنظیم زمان دلخواه برای اعلان</string>
    <string name="three_hour">3 ساعت</string>
    <string name="five_hour">5 ساعت</string>
    <string name="eight_hour">8 ساعت</string>
    <string name="twelve_hour">12 ساعت</string>
    <string name="role_time_custom">زمان انتخابی باید بین 12-1 باشد</string>

    <string name="one">یک</string>
    <string name="two">دو</string>
    <string name="three">سه</string>
    <string name="four">چهار</string>
    <string name="five">پنج</string>
    <string name="six">شش</string>
    <string name="seven">هفت</string>
    <string name="eight">هشت</string>
    <string name="nine">نه</string>
    <string name="ten">ده</string>
    <string name="eleven">یازده</string>
    <string name="twelve">دوازده</string>
    <string name="thirteen">سیزده</string>
    <string name="fourteen">چهارده</string>
    <string name="fifteen">پانزده</string>
    <string name="sixteen">شانزده</string>
    <string name="seventeen">هفده</string>
    <string name="eighteen">هجده</string>
    <string name="nineteen">نوزده</string>
    <string name="twenty">بیست</string>
    <string name="twenty_one">بیست و یک</string>
    <string name="twenty_two">بیست و دو</string>
    <string name="twenty_three">بیست و سه</string>
    <string name="twenty_four">بیست و چهار</string>
    <string name="inactive_notification">غیر فعال کردن اعلان</string>
    <string name="active_notification"> فعال کردن اعلان</string>
    <string name="title_activity_maps">Map</string>
    <string name="available_in_stock">موجود در انبار</string>
    <string name="enter_signup_phone_number">لطفا شماره تلفن ثبت نامی خود را وارد کنید</string>
    <string name="at_first_sign_up">تا کنون ثبت نام نکرده ام</string>
    <string name="login">ورود</string>
    <string name="product_info">مشخصات محصول</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="post_comment">ثبت دیدگاه</string>
    <string name="first_name_last_name">نام و نام خانوادگی</string>
    <string name="comment">دیدگاه</string>
    <string name="record">ثبت</string>
    <string name="regular_price_title">قیمت محصول با تخفیف :</string>
    <string name="price_title">قیمت محصول :</string>
    <string name="rate_one_to_five">از یک تا پنج امتیاز دهید</string>
    <string name="coupon">کد تخفیف</string>
    <string name="record_new_coupons">ثبت کد تخفیف جدید</string>
    <string name="rate">امتیاز:</string>
    <string name="comments">نظرات کاربران</string>
    <string name="update_review">ادیتش کن</string>
    <string name="cancel_update_review">ادیتش نکن</string>
    <string name="set_address_by_map">انتخاب آدرس از روی نقشه</string>
    <string name="location_dialog">ما برای نمایش این صفحه و ثبت آدرس از روی نقشه احتیاج به دسترسی به موقعیت جغرافیایی شما (Location) داریم .
        آیا به ما این دسترسی را می دهید ؟</string>
    <string name="no_internet">خطا در برقرار ارتباط</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="set_first_comment">اولین نظر درباره ی محصول را ثبت کنید</string>
    <string name="online_shop">فروشگاه آنلاین</string>
    <string name="online_shop_en">Online Shop</string>
</resources>