<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.onlinemarket.view.fragment.HomePageFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_page" >
        <action
            android:id="@+id/action_nav_home_to_nav_product_info"
            app:destination="@id/nav_product_info" >
            <argument
                android:name="productId"
                app:argType="com.example.onlinemarket.model.Product"/>
        </action>

    </fragment>

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.onlinemarket.view.fragment.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_category_detail" >
        <action
            android:id="@+id/action_nav_categories_to_nav_category_product"
            app:destination="@id/nav_category_product"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:enterAnim="@anim/fade_in"
            >
            <argument
                android:name="catId"
                app:argType="integer"/>
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.onlinemarket.view.fragment.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_filter"
        android:name="com.example.onlinemarket.view.fragment.FilterFragment"
        android:label="@string/menu_filter"
        tools:layout="@layout/fragment_filter" />

    <fragment
        android:id="@+id/nav_user_account"
        android:name="com.example.onlinemarket.view.fragment.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account"
        />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.onlinemarket.view.fragment.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification"
        />

    <fragment
        android:id="@+id/nav_product_info"
        android:name="com.example.onlinemarket.view.fragment.ProductInfoFragment"
        android:label="@string/menu_product_info"
        tools:layout="@layout/fragment_product_info"
        >
        <argument
            android:name="productId"
            app:argType="com.example.onlinemarket.model.Product"/>
    </fragment>

    <fragment
        android:id="@+id/nav_category_product"
        android:name="com.example.onlinemarket.view.fragment.CategoryProductsFragment"
        android:label=" "
        tools:layout="@layout/fragment_category_detail"
        >
        <argument
            android:name="catId"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.onlinemarket.view.fragment.MapTestFragment"
        android:label="نقشه"
        />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.onlinemarket.view.fragment.CartFragment"
        android:label="سبد خرید"
        tools:layout="@layout/fragment_cart"
        />

    <fragment
        android:id="@+id/nav_sign"
        android:name="com.example.onlinemarket.view.fragment.LoginFragment"
        android:label="ورود"
        tools:layout="@layout/fragment_login"
        />

    <fragment
        android:id="@+id/nav_customer_page"
        android:name="com.example.onlinemarket.view.fragment.CustomerFragment"
        android:label="ورود"
        tools:layout="@layout/fragment_custmer"
        />
</navigation>