<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
            <FrameLayout
                android:id="@+id/map_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="bottom"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.fragment.CustomerInfoFragment"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_first_name"
                style="@style/TextStylePersian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_light_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_last_name"
                style="@style/TextStylePersian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/family_name"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_light_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_email_name"
                style="@style/TextStylePersian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_light_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_username_name"
                style="@style/TextStylePersian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_light_gray" />


        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>