<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.onlinemarket.viewModel.NotificationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.NotificationFragment"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_state_notification"
            style="@style/TextStylePersian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            />

        <ImageView
            android:id="@+id/btn_setup_notification"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="@{()->viewModel.setupNotification()}"
            app:srcCompat="@drawable/ic_notif_red"
            />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextStylePersian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_notification"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="right"
            android:layout_margin="8dp"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/guide_top"
            >

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_three_hour"
                style="@style/TextStylePersian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_hour"
                android:onClick="@{()->viewModel.setTime(3)}"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_five_hour"
                style="@style/TextStylePersian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_hour"
                android:onClick="@{()->viewModel.setTime(5)}"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_eight_hour"
                style="@style/TextStylePersian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight_hour"
                android:onClick="@{()->viewModel.setTime(8)}"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_twelve_hour"
                style="@style/TextStylePersian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelve_hour"
                android:onClick="@{()->viewModel.setTime(12)}"
                />
        </RadioGroup>

<!--        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_custom_time"
            style="@style/TextStylePersian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_custom_notification"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_top" />-->

        <!--<NumberPicker
            android:id="@+id/number_picker_hours"
            style="@style/MyNumberPickerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_custom_time" />-->



    </LinearLayout>
</layout>