<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SignUpPageFragment"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextStylePersian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name_family_name"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextStylePersian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextStylePersian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/telephone"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.PinkBackground"
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/sign_up"
            android:fontFamily="@font/sahel_bold" />
    </LinearLayout>
</layout>